--- a/botconfig.yml
+++ b/botconfig.yml
@@ -14,4 +14,4 @@ spec:
       containers:
         - name: $IMAGE_NAME
           image: $COMPANY_NAME/$IMAGE_NAME
-          command: ["python3", "/gtmhub_bot/gtmhub_bot.py"]
+          command: ["python3", "/tmp/gtmhub_bot.py"]
