fix(chore): fix configs #4

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
             - checkout
             - setup_remote_docker
             - run:
+                name: Write config
+                command: envsubst < ./config/config_unfilled.json > ./config/config.json
+            - run:
                 name: Build Docker image
                 command: docker build -t $IMAGE_NAME .
             - run:
@@ -39,7 +42,6 @@ jobs:
                 name: Make configs
                 command: |
                     envsubst < botconfig.yml > botconfig_out.yml
-                    envsubst < ./config/config_unfilled.json > ./config/config.json
             - run:
                 name: Deploy to DigitalOcean
                 command: ./kubectl apply -f botconfig_out.yml
